# svv-ergebnis-anzeige

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
src/: errors.rs  main.rs  web_backend.rs
src/display_serve/: mod.rs
src/panels/: mod.rs  score_panel.rs
src/web_backend/: db.rs  minutes.rs  mod.rs  score.rs  teams.rs
