[package]
name = "svv-ergebnis-anzeige"
version = "0.1.0"
authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
edition = "2018"

[dependencies]
iron = "0.6.0"
iron-cors = "0.8"
mysql = "14.1.1"
router = "0.6.0"

# rpi-led-matrix = "0.1.1"

failure = "0.1.3"
bytes = "0.4.10"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"