[package]
name = "backend-ea"
version = "0.1.0"
authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
edition = "2018"

[dependencies]
mysql = "14.1.1"

actix = "0.7"
actix-web = "0.7"
futures = "0.1"
json = "0.11"
env_logger = "0.6"

rpi-led-matrix = "0.1"

failure = "0.1.3"
log = "0.4"
bytes = "0.4.10"
docopt = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
cc = "1.0"